# api-flask-barcode

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: run.py
src/controllers/: tag_creator_controller.py
src/errors/: error_handler.py
src/main/routes/: tag_routes.py
src/validators/: tag_creator_validator.py
src/views/: tag_creator_view.py
tests/controllers/: test_tag_creator_controller.py
tests/validators/: test_tag_creator_validator.py
